kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sigo-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sigo-gateway
  template:
    metadata:
      labels:
        app: sigo-gateway
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: sigo-gateway
        image: docker.io/brunoferreirag/sigo-api-gateway:latest
        ports:
        - containerPort: 8001
          name: sigo-gateway
        resources:
          requests:
            memory: "256Mi"
            cpu: "10m"
          limits:
            memory: "512Mi"
            cpu: "256m"
---
apiVersion: v1
kind: Service
metadata:
  name: sigo-gateway
spec:
  ports:
    - name: sigo-gateway
      protocol: TCP
      port: 8001
  selector:
    app: sigo-gateway
---
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    dev.okteto.com/generate-host: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST,DELETE,OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "authorization,content-type,pragma,expires,cache-control"
  name: sigo-gateway
spec:
  rules:
  - http:
      paths:
        - path: /api/gestao-norma-industrial
          backend:
            serviceName: sigo-api-gestao-normas-industriais
            servicePort: 8006  
        - path: /api/usuarios
          backend:
            serviceName: sigo-gateway
            servicePort: 8001
---
